<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyMapsActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/zoomButtonsCont"
        android:layout_width="50sp"
        android:layout_height="100sp"
        android:orientation="vertical"
        android:layout_gravity="bottom|end">
        <Button
            android:id="@+id/zoomButtonsPlus"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:text="@string/aPlusSign"/>
        <Button
            android:id="@+id/zoomButtonsMinus"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:text="@string/aMinusSign"/>
    </LinearLayout>

    <Button
        android:id="@+id/menuButton"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:layout_gravity="bottom"
        android:text="@string/theWordMenu"
        android:visibility="visible" />
    <LinearLayout
        android:id="@+id/menuContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/menuExitButton"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:text="@string/exit_menuButtonText" />
        <TextView
            android:id="@+id/myNameTextPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myNameTextPromptString"/>

        <EditText
            android:id="@+id/myNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="text"
            android:hint="@string/marker_nameString"
            android:autofillHints="name"/>
        <Button
            android:id="@+id/menuEnableAutoZoom"
            android:layout_width="wrap_content"
            android:layout_height="50sp" />
        <Button
            android:id="@+id/menuEnableAutoCenter"
            android:layout_width="wrap_content"
            android:layout_height="50sp" />
        <Button
            android:id="@+id/menuEnableOneKlickCircle"
            android:layout_width="wrap_content"
            android:layout_height="50sp" />
        <TextView
            android:id="@+id/serialOutputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

    </LinearLayout>
</fragment>